# claude-usage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
claude_usage/: __init__.py  __main__.py  aggregator.py  models.py  parser.py  renderer.py  skill_tracking.py
claude_usage/advisor_analyzer/: __init__.py  events.py
claude_usage/cli/: __init__.py  dashboard.py  session_summary.py
docs/: design.md  plan.md
docs/superpowers/plans/: 2026-04-09-skill-adoption-tracking.md  2026-04-23-session-summary-implementation-plan.md  2026-04-24-ci-workflow-plan.md
docs/superpowers/specs/: 2026-04-09-skill-adoption-tracking-design.md  2026-04-22-session-summary-design.md
templates/: dashboard.html
tests/: conftest.py  test_advisor_contract.py  test_advisor_events.py  test_aggregator.py  test_aggregator_adoption.py  test_cli.py  test_cli_subcommands.py  test_dashboard_snapshot.py  test_e2e.py  test_models.py  test_parser.py  test_renderer.py  test_session_summary.py  test_skill_tracking.py
tests/fixtures/: dashboard_snapshot_pre_refactor.json  sanitize_transcript.py
tests/fixtures/session_summaries/: consecutive_edits_same_file.jsonl  happy_path.jsonl  max_tokens_stop.jsonl  mcp_both_forms.jsonl  missing_stop_reason.jsonl  no_assistant_entries.jsonl  over_fifty_actions.jsonl  prevented_continuation.jsonl  slash_command_only.jsonl
